--- a/style.css
+++ b/style.css
@@ -156,8 +156,7 @@ section h1 {
 
 /*-----SECCION FELIZ mg-logo*/
 .feliz {
-    background-image: url(./img/ayuntamiento-fondo.jpg);
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: white;
     background-blend-mode: darken;
     background-size: cover;
     background-position: center;
@@ -1544,4 +1543,5 @@ section h1 {
         padding: 2rem 1rem 0;
     }
 }
+
 
