--- a/style.css
+++ b/style.css
@@ -1546,4 +1546,246 @@ section h1 {
 }
 
 
+/* CONTENEDOR PRINCIPAL */
+.contenedor {
+    padding: 20px;
+}
+
+/* CADA MEDIDA */
+.medida {
+    display: flex;              /* Imagen izquierda / texto derecha */
+    gap: 50px; 
+    background-color: white;
+    padding: 20px;
+    margin-bottom: 30px;
+    border-radius: 8px;
+    align-items: center;
+}
+
+/* IMÁGENES PEQUEÑAS */
+.medida img {
+    background-image: url("images/panel.jpg");
+    width: 250px;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+/* TEXTO */
+.texto h2 {
+    color: #2e7d32;
+    margin-bottom: 10px;
+}
+
+/* TABLA */
+table {
+    margin-top: 10px;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #b0aeae;
+    padding: 6px;
+}
+
+/* LIGHTBOX (imagen ampliada) */
+.lightbox {
+    display: none;              /* Oculta por defecto */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Cuando se hace clic */
+.lightbox:target {
+    display: flex;
+}
+
+/* Imagen grande */
+.lightbox img {
+    background-image: url("images/panel.jpg");
+    width: 100%;
+    max-width: 800px;
+    border-radius: 10px;
+}
+
+
+.contenedor {
+    padding: 20px;
+}
+
+/* ENLACE QUE ENVUELVE TODO */
+.bloque-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    margin-bottom: 20px;
+}
+
+/* BLOQUES (ZONAS ROJAS) */
+.medida {
+    display: flex;
+    gap: 20px;
+    background-color: white;
+    padding: 15px;
+    border-radius: 8px;
+    align-items: center;
+    transition: transform 0.2s, background-color 0.2s;
+}
+
+/* EFECTO AL PASAR EL RATÓN */
+.bloque-link:hover .medida {
+    background-color: #f1f8e9;
+    transform: scale(1.01);
+    cursor: pointer;
+}
+
+.medida img {
+    width: 180px;
+    border-radius: 6px;
+}
+
+.texto h2 {
+    color: #005c03;
+    margin-bottom: 10px;
+}
+
+
+/* ===== PÁGINAS INTERNAS ===== */
+
+.pagina-detalle {
+    padding: 30px;
+}
+
+/* TÍTULO GRANDE CON FONDO */
+.cabecera-apartado {
+    background-image: url("images/panel3.png"); /* opcional */
+    background-size: 100%;
+    background-position: center bottom;
+    padding: 70px 0%;
+    margin-bottom: 40px;
+    text-align: center;
+    color: #ffffff;
+}
+.cabecera-apartado2 {
+    background-image: url("images/reciclaje2.jpg"); /* opcional */
+    background-size: 105%;
+    background-position: center center;
+    padding: 70px 20%;
+    margin-bottom: 40px;
+    text-align: center;
+    color: #fff0f0;
+}
+.cabecera-apartado3 {
+    background-image: url("images/transporte2.jpg"); /* opcional */
+    background-size: 100%;
+    background-position: center center;
+    padding: 70px 30%;
+    margin-bottom: 40px;
+    text-align: center;
+    color: #fff0f0;
+}
+.cabecera-apartado h1 {
+    font-size: 42px;
+}
+.cabecera-apartado2 h1 {
+    font-size: 45px;
+}
+.cabecera-apartado3 h1 {
+    font-size: 45px;
+}
+/* CONTENIDO PRINCIPAL */
+.contenido {
+    display: flex;
+    gap: 40px;
+    align-items: flex-start;
+}
+
+/* TEXTO IZQUIERDA */
+.contenido .texto {
+    flex: 2;
+}
+
+.contenido h2 {
+    font-size: 26px;
+    color: #2e7d32;
+    margin-bottom: 15px;
+}
+.contenido h3 {
+    font-size: 18px;
+    color: #000000;
+    margin-bottom: 15px;
+}
+
+.contenido p {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-bottom: 15px;
+}
+
+/* IMÁGENES DERECHA */
+.imagenes {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+
+.imagenes img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+/* RESPONSIVE (MÓVIL) */
+@media (max-width: 768px) {
+    .contenido {
+        flex-direction: column;
+    }
+}
+
+/* ===== CONSEJOS EMPRESAS Y CIUDADANOS ===== */
+
+.cabecera-apartado4 {
+    background-image: url("images/empresa.jpg"); /* opcional */
+    background-size: 100%;
+    background-position: center top;
+    padding: 70px 20%;
+    margin-bottom: 40px;
+    text-align: center;
+    color: #fff0f0;
+}
+.bloque-consejos {
+    background-color: rgb(255, 255, 255);
+    padding: 25px;
+    margin-bottom: 30px;
+    border-radius: 8px;
+}
+
+.bloque-consejos h2 {
+    font-size: 28px;
+    color: #000000;
+    margin-bottom: 20px;
+    border-bottom: 2px solid #000000;
+    padding-bottom: 5px;
+}
+
+.consejo {
+    margin-bottom: 20px;
+}
+
+.consejo h3 {
+    font-size: 20px;
+    color: #000000;
+    margin-bottom: 8px;
+}
+
+.consejo p {
+    font-size: 16px;
+    line-height: 1.6;
+}
+
 
